[workspace]
resolver = "2"

members = [
    "tutorial",
    "version-helper",

    "audio/audiofx",
    "audio/claxon",
    "audio/csound",
    "audio/lewton",
    "audio/spotify",

    "generic/file",
    "generic/sodium",
    "generic/threadshare",
    "generic/inter",

    "mux/flavors",
    "mux/fmp4",
    "mux/mp4",

    "net/aws",
    "net/hlssink3",
    "net/ndi",
    "net/onvif",
    "net/raptorq",
    "net/reqwest",
    "net/rtp",
    "net/rtsp",
    "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",

    "text/ahead",
    "text/json",
    "text/regex",
    "text/wrap",

    "utils/fallbackswitch",
    "utils/livesync",
    "utils/togglerecord",
    "utils/tracers",
    "utils/uriplaylistbin",

    "video/cdg",
    "video/closedcaption",
    "video/dav1d",
    "video/ffv1",
    "video/gif",
    "video/gtk4",
    "video/hsv",
    "video/png",
    "video/rav1e",
    "video/videofx",
    "video/webp",
]

# Only plugins without external dependencies
default-members = [
    "version-helper",

    "audio/audiofx",
    "audio/claxon",
    "audio/lewton",

    "generic/threadshare",
    "generic/inter",

    "mux/fmp4",
    "mux/mp4",

    "net/aws",
    "net/hlssink3",
    "net/onvif",
    "net/raptorq",
    "net/reqwest",
    "net/rtp",
    "net/rtsp",
    "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",
    "net/ndi",

    "text/ahead",
    "text/json",
    "text/regex",
    "text/wrap",

    "utils/fallbackswitch",
    "utils/livesync",
    "utils/togglerecord",
    "utils/tracers",
    "utils/uriplaylistbin",

    "video/cdg",
    "video/ffv1",
    "video/gif",
    "video/hsv",
    "video/png",
    "video/rav1e",
]

[profile.release]
lto = true
opt-level = 3
debug = true
panic = 'unwind'

[profile.dev]
opt-level = 1
lto = "off"

[workspace.package]
version = "0.12.10"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
once_cell = "1"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.19", version = "0.19" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.19", version = "0.19" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.19", version = "0.19", features=["use_glib"] }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.19", version = "0.19" }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.19", version = "0.19" }
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.8", version = "0.8"}
gdk-wayland = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.8", version = "0.8"}
gdk-x11 = { package = "gdk4-x11", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.8", version = "0.8"}
gdk-win32 = { package = "gdk4-win32", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.8", version = "0.8"}
gst = { package = "gstreamer", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-allocators = { package = "gstreamer-allocators", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-app = { package = "gstreamer-app", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-base = { package = "gstreamer-base", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-check = { package = "gstreamer-check", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-gl = { package = "gstreamer-gl", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-gl-egl = { package = "gstreamer-gl-egl", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-gl-wayland = { package = "gstreamer-gl-wayland", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-gl-x11 = { package = "gstreamer-gl-x11", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-net = { package = "gstreamer-net", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-plugin-version-helper = { path="./version-helper", version = "0.8" }
gst-rtp = { package = "gstreamer-rtp", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-sdp = { package = "gstreamer-sdp", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-utils = { package = "gstreamer-utils", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-video = { package = "gstreamer-video", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://github.com/blinemedical/gstreamer-rs", rev = "ae8af3f" }
