[package]
name = "gst-plugin-flate"
version.workspace = true
authors = ["Daniel Morin <daniel.morin@collabora.com>"]
license = "MPL-2.0"
description = "GStreamer plugin for zlib and deflate compression/decompression"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gst.workspace = true
gst-base.workspace = true
flate2 = "1.0"


[lib]
name = "gstflate"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dev-dependencies]
gst-check.workspace = true
gst-app.workspace = true
tempfile = "3"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
